--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,21 @@
 /* 全局样式文件 */
 
 @import './icon.less';
+
+
+body {
+    background-color: #f5f7f9;
+}
+
+// 头部导航栏样式
+.app-nav-bar {
+    background-color: #3296fa !important;
+
+    .van-nav-bar__title {
+        color: #fff;
+    }
+
+    .van-icon {
+        color: #fff !important;
+    }
+}
